[package]
name = "wiremock_logical_matchers"
version = "0.1.2"
authors = [ "Charles Lechasseur <shiftingbeard@gmx.com>" ]
edition = "2018"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/wiremock_logical_matchers#readme"
repository = "https://github.com/clechasseur/wiremock_logical_matchers"
documentation = "https://docs.rs/wiremock_logical_matchers/"

description = "Logical matchers for use with wiremock."

keywords = [ "test", "http", "mocking", "mock", "wiremock" ]
categories = [ "development-tools", "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[dependencies]
derivative = "2.2.0"
wiremock = "0"

[dev-dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = "0.11.21"

[build-dependencies]
rustc_version = "0.4.0"
