[package]
name = "wiremock_logical_matchers"
version = "0.5.0"
authors = [ "Charles Lechasseur <shiftingbeard@gmx.com>" ]
edition = "2018"
rust-version = "1.68.2"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/wiremock_logical_matchers#readme"
repository = "https://github.com/clechasseur/wiremock_logical_matchers"
documentation = "https://docs.rs/wiremock_logical_matchers/"

description = "Logical matchers for use with wiremock."

keywords = [ "test", "http", "mocking", "mock", "wiremock" ]
categories = [ "development-tools", "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[dependencies]
derivative = "2.2.0"
wiremock = "0.5.22"

[dev-dependencies]
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
rustc_version = "0.4.0"
