[package]
name = "wiremock_logical_matchers"
version = "0.6.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.68.2"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/wiremock_logical_matchers#readme"
repository = "https://github.com/clechasseur/wiremock_logical_matchers"
documentation = "https://docs.rs/wiremock_logical_matchers/"

description = "Logical matchers for use with wiremock."

keywords = [ "test", "http", "mocking", "mock", "wiremock" ]
categories = [ "development-tools", "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
wiremock = "0.6.2"

[dev-dependencies]
reqwest = "0.12.9"
tokio = { version = "1.41.0", features = ["full"] }
